--- a/app/src/main/res/layout/activity_fragment_register.xml
+++ b/app/src/main/res/layout/activity_fragment_register.xml
@@ -66,7 +66,7 @@
             android:drawableLeft="@drawable/ic_email"
             android:text=" Email"
             android:textSize="30sp"
-
+            android:inputType="textEmailAddress"
             />
 
         <EditText
