Encrypt&Decrypt IMG fb storage

--- a/app/src/main/res/layout/activity_deatils_test.xml
+++ b/app/src/main/res/layout/activity_deatils_test.xml
@@ -12,14 +12,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
-<com.google.android.material.textview.MaterialTextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textSize="45sp"
-    android:fontFamily="@font/lbl_comic_bold"
-    android:text="Last words before test?"
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="45sp"
+            android:fontFamily="@font/lbl_comic_bold"
+            android:text="Last words before test?"
 
-    />
+            />
         <EditText
             android:id="@+id/descriptionEditText"
             android:layout_width="match_parent"
@@ -36,19 +36,19 @@
             android:layout_marginBottom="16dp"> <!-- Added spacing below date spinners -->
 
             <Spinner
-                android:id="@+id/daySpinner"
+                android:id="@+id/DTEST_daySpinner"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
 
             <Spinner
-                android:id="@+id/monthSpinner"
+                android:id="@+id/DTEST_monthSpinner"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
 
             <Spinner
-                android:id="@+id/yearSpinner"
+                android:id="@+id/DTEST_yearSpinner"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
@@ -58,9 +58,17 @@
             android:id="@+id/locationFab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_locate"
+            android:src="@drawable/ic_locat"
             app:fabSize="normal" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/BTN_DEAT_SUBMIT"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="SUBMIT"
+            android:layout_margin="75dp"
+            android:visibility="invisible"
+            />
         <!-- Other UI components here. Add a marginBottom to the last element above the LinearLayout belowDea if needed. -->
 
     </LinearLayout>
@@ -72,14 +80,17 @@
         android:orientation="horizontal"
         android:padding="16dp"
         android:layout_gravity="bottom"
-    android:gravity="center_vertical">
+        android:layout_marginBottom="140dp"
+        android:gravity="center_vertical">
 
-    <EditText
-        android:id="@+id/locationDescriptionEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:hint="Describe location"
-        android:layout_marginEnd="16dp"/> <!-- Added spacing between EditText and FloatingActionButton -->
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/locationDescriptionEditText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Describe location"
+            android:layout_marginEnd="16dp"/>
+
     </LinearLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
