--- a/app/src/main/res/layout/activity_deatils_test.xml
+++ b/app/src/main/res/layout/activity_deatils_test.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".YourActivity">
+    tools:context=".Menu.DeatilsTest">
 
     <LinearLayout
         android:id="@+id/aboveDea"
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
+
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,7 +61,13 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_locat"
             app:fabSize="normal" />
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:textSize="19sp"
 
+            android:text="to Start so click on me \n until we get your location"
+            />
         <com.google.android.material.button.MaterialButton
             android:id="@+id/BTN_DEAT_SUBMIT"
             android:layout_width="wrap_content"
