--- a/app/src/main/res/layout/fragment_quest.xml
+++ b/app/src/main/res/layout/fragment_quest.xml
@@ -41,11 +41,11 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/BTN_test_ok"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Submit"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="150dp"
         android:backgroundTint="#F9A825"
