--- a/app/src/main/res/layout/activity_deatils_test.xml
+++ b/app/src/main/res/layout/activity_deatils_test.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".Menu.DeatilsTest">
 
+    <ProgressBar
+        android:id="@+id/progressBarDea"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        />
     <LinearLayout
         android:id="@+id/aboveDea"
         android:layout_width="match_parent"
