--- a/app/src/main/res/layout/activity_results_graph.xml
+++ b/app/src/main/res/layout/activity_results_graph.xml
@@ -135,10 +135,10 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie_res"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
         android:layout_weight="1"
-        app:lottie_rawRes="@raw/lottie_til"
+        app:lottie_rawRes="@raw/lottie_wizard"
         android:tintMode="src_in"
 
         />
