finished develops tests

--- a/app/src/main/res/layout/activity_manager.xml
+++ b/app/src/main/res/layout/activity_manager.xml
@@ -46,8 +46,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Convert"
-        android:textSize="35sp"
+        android:text="Export Data"
+        android:textSize="30sp"
         />
 
 </LinearLayout>
