--- a/app/src/main/res/layout/activity_personality_test.xml
+++ b/app/src/main/res/layout/activity_personality_test.xml
@@ -40,9 +40,9 @@
     <EditText
         android:id="@+id/EditAdminSubject"
         android:layout_below="@+id/frame_quest"
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="   write your question here"
+        android:text="write your question here"
         android:background="@color/white"
         android:layout_marginBottom="34dp"
         android:visibility="invisible"
