--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -21,5 +21,5 @@
         android:id="@+id/buttonDataAction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Analyze" />
+        android:text="Refresh" />
 </LinearLayout>
